update doc and refactor handler
